[spring-book-configurationProperties] feat : 설정 프로퍼티 예제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=springplayground
 
-greeting-name=Dokata
-greeting-coffee=${greeting-name} is drinking Cafe Cereza
+greeting.name = Dakoat
+greeting.coffee = Dakota is drinking Cafe Ceraza
+
+droid.description=Small, rolling android. 
+droid.id=BB-8
