--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ greeting.coffee = Dakota is drinking Cafe Ceraza
 
 droid.description=Small, rolling android. 
 droid.id=BB-8
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
