--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+spring.datasource.platform=mysql
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/mark
+spring.datasource.username=mark
+spring.datasource.password=sbux
+
+spring.datasource.initialization-mode=always
