[inflearn-spring-basic] feat : lombok 사용, Autowired 특성 테스트

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	implementation 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
