[jpa-1] feat : html 관련 코드 추가

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,4 @@ jpa-1/jpashop/.idea/jarRepositories.xml
 jpa-1/jpashop/.idea/runConfigurations.xml
 jpa-1/jpashop/.idea/misc.xml
 jpa-1/jpashop/.idea/compiler.xml
+jdbc/jdbc/.idea/uiDesigner.xml
