[spring-db2] feat : jdbc 실습

--- a/spring-db2/itemservice-db/src/main/resources/application.properties
+++ b/spring-db2/itemservice-db/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=local
 
 spring.datasource.username=sa
 spring.datasource.password=0000
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
