[spring-db2] feat : 데이터베이스 테스트

--- a/spring-db2/itemservice-db/src/test/resources/application.properties
+++ b/spring-db2/itemservice-db/src/test/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=test
+
+#spring.datasource.username=sa
+#spring.datasource.password=0000
+
+logging.level.org.springframework.jdbc=debug
