[spring-db2] feat : MyBatis 실습

--- a/spring-db2/itemservice-db/src/test/resources/application.properties
+++ b/spring-db2/itemservice-db/src/test/resources/application.properties
@@ -4,3 +4,10 @@ spring.profiles.active=test
 #spring.datasource.password=0000
 
 logging.level.org.springframework.jdbc=debug
+
+
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservices.repository.mybatis=trace
