--- a/spring-db2/itemservice-db/build.gradle
+++ b/spring-db2/itemservice-db/build.gradle
@@ -29,7 +29,9 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	runtimeOnly 'com.h2database:h2'
 
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
