--- a/spring-db2/itemservice-db/src/main/resources/application.properties
+++ b/spring-db2/itemservice-db/src/main/resources/application.properties
@@ -11,4 +11,6 @@ mybatis.type-aliases-package=hello.itemservice.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.hello.itemservices.repository.mybatis=trace
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #?? ??? Application ??? ???? ? ???? ?????.
