[master] feat : gitignore 중복되는 표현 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -168,37 +168,16 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
-jpa1/jpashop/.idea/vcs.xml
-mvc2/jpql/.idea
-mvc2/jpql/jpql.iml
-mvc2/jpql/.idea/workspace.xml
-jdbc/jdbc/.idea/misc.xml
-.idea/.gitignore
-.idea/modules.xml
-.idea/runConfigurations.xml
-.idea/SpringPlayground.iml
-.idea/vcs.xml
-jdbc/jdbc/.idea/.gitignore
-jdbc/jdbc/.idea/compiler.xml
-jdbc/jdbc/.idea/gradle.xml
-jdbc/jdbc/.idea/jarRepositories.xml
-jdbc/jdbc/.idea/runConfigurations.xml
-jdbc/jdbc/.idea/vcs.xml
-jdbc/jdbc/.idea/vcs.xml
-jpa-1/jpashop/.idea/.gitignore
-jpa-1/jpashop/.idea/vcs.xml
-jpa-1/jpashop/.idea/gradle.xml
-jpa-1/jpashop/.idea/jarRepositories.xml
-jpa-1/jpashop/.idea/runConfigurations.xml
-jpa-1/jpashop/.idea/misc.xml
-jpa-1/jpashop/.idea/compiler.xml
-jdbc/jdbc/.idea/uiDesigner.xml
-spring-db2/itemservice-db/.idea/.gitignore
-spring-db2/itemservice-db/.idea/compiler.xml
-spring-db2/itemservice-db/.idea/misc.xml
-spring-db2/itemservice-db/.idea/vcs.xml
-spring-db2/itemservice-db/.idea/runConfigurations.xml
-spring-db2/itemservice-db/.idea/jarRepositories.xml
-spring-db2/itemservice-db/.idea/gradle.xml
-spring-db2/itemservice-db/HELP.md
-jpa-1/jpashop/.idea/compiler.xml
+
+**/.idea/.gitignore
+**/.idea/compiler.xml
+**/.idea/misc.xml
+**/.idea/vcs.xml
+**/.idea/runConfigurations.xml
+**/.idea/jarRepositories.xml
+**/.idea/gradle.xml
+**/.idea/uiDesigner.xml
+**/.idea/modules.xml
+**/.idea/SpringPlayground.iml
+**/jpql.iml
+**/HELP.md
