--- a/jpa-1/jpashop/src/main/resources/application.yml
+++ b/jpa-1/jpashop/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
