--- a/jpa-1/jpashop/src/main/resources/application.yml
+++ b/jpa-1/jpashop/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+        default_batch_size: 100
 
 #logging:
 #  level:
