--- a/data-jpa/src/main/resources/application.properties
+++ b/data-jpa/src/main/resources/application.properties
@@ -6,11 +6,7 @@ spring.datasource.password=0000
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=create
-#spring.properties.hibernate.show_sql=true
+spring.properties.hibernate.show_sql=true
 spring.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=debug
-
-spring.database.url=jdbc:h2:tcp://localhost/~/data-jpa
-spring.database.name=sa
-spring.database.password=0000
