--- a/data-jpa/src/main/resources/application.properties
+++ b/data-jpa/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.properties.hibernate.show_sql=true
 spring.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=debug
+
+#spring.data.web.pageable.default-page-size=10
+#spring.data.web.pageable.max-page-size=2000
